--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,4 @@
-<p>Disclaimer</p>
+<p><b>Disclaimer</b></p>
 
 <p>The information contained in this application(app)/website is for general information purposes only. This information is provided by GKVK Edutech LLP (operating under the brand name Aeromatics)and other third party vendors. While we endeavor to keep the information up to date and correct, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the website or the information, products, services, or related graphics contained on the website for any purpose. Any reliance you place on such information is therefore strictly at your own risk.</p>
 
