--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -10,9 +10,9 @@
 
 <p>GKVK Edutech LLP is located at &ndash; Address: Sect 14 Phase 11 Mohali, Punjab 160062 Email: admin@Aeromatics.co.in</p>
 
-<p> TERMS AND CONDITIONS</p>
+<p><b> TERMS AND CONDITIONS</b></p>
 
-<p>Privacy Policy</p>
+<p><b>Privacy Policy</b></p>
 
 <p>We value your trust. In order to honour that trust, Aeromatics adheres to ethical standards in gathering, using, and safeguarding any information you provide. GKVK Edutech LLP (operating under the brand name Aeromatics), is a edutech company, incorporated in India, for imparting learning. This privacy policy governs your use of the application 'CPSS -skill enhancement ' ('Application'), Commercial pilots - Skill enhancement app, www. Aeromatics.co.in ('Website') and the other associated applications, products, websites and services managed by the Company. Please read this privacy policy ('Policy') carefully before using the Application, Website, our services and products, along with the Terms of Use ('ToU') provided on the Application and the Website. Your use of the Website, Application, or services in connection with the Application, Website or products ('Services'), or registrations with us through any modes or usage of any products including through SD cards, tablets or other storage/transmitting device shall signify your acceptance of this Policy and your agreement to be legally bound by the same. If you do not agree with the terms of this Policy, do not use the Website, Application our products or avail any of our Services.</p>
 
